--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-interactions": "^8.5.1",
     "@storybook/addon-onboarding": "^8.5.1",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/blocks": "^8.5.1",
     "@storybook/nextjs": "^8.5.1",
     "@storybook/react": "^8.5.1",
